# app_eventflow-payment-service

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: config.py  consumer.py  main.py  models.py  processor.py
tests/: conftest.py  test_processor.py  test_resilience.py
